knob works. filling in conditionals

--- a/6-16.md
+++ b/6-16.md
@@ -36,3 +36,30 @@ curr ideas
 i think run_timer_sampler might be the winner for now with a 850-1000Hz timer, we are using a resolution of i think 14mhz lets check 
 
 ok so the real question is do we replace the saadc code :re rotary encoders with a new library altogether
+
+21:56:
+04:56:00.033: knob level is 12
+04:56:00.088: knob level is 12
+04:56:00.142: knob level is 12
+04:56:00.188: knob level is 11
+04:56:00.188:                 
+04:56:00.188: red: 0          
+04:56:00.188: green: 0        
+04:56:00.188: blue: 11        
+04:56:00.188: frame rate: 100 
+04:56:00.247: knob level is 11
+04:56:00.295: knob level is 10
+04:56:00.295:                 
+04:56:00.295: red: 0          
+04:56:00.295: green: 0        
+04:56:00.295: blue: 10        
+04:56:00.295: frame rate: 100 
+04:56:00.342: knob level is 9 
+04:56:00.342:                 
+04:56:00.342: red: 0          
+04:56:00.342: green: 0        
+04:56:00.342: blue: 9         
+04:56:00.342: frame rate: 100 
+04:56:00.393: knob level is 8 
+04:56:00.393:                 
+knob works 
